added doi to some papers

--- a/robby_bib.html
+++ b/robby_bib.html
@@ -29,7 +29,18 @@
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
   note = {accepted to {IEEE Trans. Comm.}},
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.}
+  month = {Apr.},
+  year = 2014
+}
+</pre>
+
+<a name="Pollok_mod_crb_2014"></a><pre>
+@unpublished{<a href="robby.html#Pollok_mod_crb_2014">Pollok_mod_crb_2014</a>,
+  author = {A. Pollok and R. G. McKilliam},
+  note = {accepted to {IEEE Trans. Comm.}},
+  title = {Modified {Cramer-Rao} Bounds for Continuous-Phase Modulated Signals},
+  month = {Apr.},
+  year = 2014
 }
 </pre>
 
