--- a/robby.html
+++ b/robby.html
@@ -41,7 +41,7 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
  Decoder-assisted timing synchronization in multiuser CDMA systems.
- accepted to IEEE Trans. Comm., Apr.
+ accepted to IEEE Trans. Comm., Apr. 2014.
 [&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;]
 
 </td>
@@ -50,7 +50,21 @@ J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">3</a>]
+[<a name="Pollok_mod_crb_2014">3</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
+ Modified Cramer-Rao bounds for continuous-phase modulated signals.
+ accepted to IEEE Trans. Comm., Apr. 2014.
+[&nbsp;<a href="robby_bib.html#Pollok_mod_crb_2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="6510040">4</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -69,7 +83,7 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">4</a>]
+[<a name="McKilliam_asrp_phase_2012">5</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -84,7 +98,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">5</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -99,7 +113,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_McKilliam_crb_cpm_2014">6</a>]
+[<a name="Pollok_McKilliam_crb_cpm_2014">7</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -114,7 +128,7 @@ A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">7</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -129,7 +143,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">8</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -144,7 +158,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">9</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -160,7 +174,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">10</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
@@ -179,7 +193,7 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">11</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
@@ -194,7 +208,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkso
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_multiple_sparse_noisy_SSP_2014">12</a>]
+[<a name="Quinn_multiple_sparse_noisy_SSP_2014">13</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -210,7 +224,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">13</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">14</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -226,7 +240,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">14</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -245,7 +259,7 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">15</a>]
+[<a name="McKilliam_error_prob_An2012">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -260,7 +274,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">16</a>]
+[<a name="McKilliam_direstcro_dasp_2011">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -274,7 +288,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">17</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -291,7 +305,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">18</a>]
+[<a name="McKilliam2007">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -307,7 +321,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">19</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -327,7 +341,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">20</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -342,7 +356,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">21</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -358,7 +372,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">22</a>]
+[<a name="6363913">23</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -378,7 +392,7 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">23</a>]
+[<a name="Quinn20013asilomar_period_est">24</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -394,7 +408,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">24</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -409,7 +423,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">25</a>]
+[<a name="McKilliam2006">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -424,7 +438,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">26</a>]
+[<a name="McKilliam2008">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -440,7 +454,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">27</a>]
+[<a name="McKilliam2008b">28</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -456,7 +470,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">28</a>]
+[<a name="McKilliam2008a">29</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -473,7 +487,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">29</a>]
+[<a name="McKilliam2009CoxeterLattices">30</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -491,7 +505,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">30</a>]
+[<a name="McKilliam2010thesis">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -506,7 +520,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">31</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">32</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -527,7 +541,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">32</a>]
+[<a name="Quinn2008maximizing_the_periodogram">33</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -545,7 +559,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">33</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">34</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
@@ -563,7 +577,7 @@ Keywords: Lattices;Least squares approximations;Phase estimation;Polynomials;Sig
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">34</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">35</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
