added newer bib

--- a/robby.html
+++ b/robby.html
@@ -43,8 +43,9 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
  Decoder-assisted timing synchronization in multiuser CDMA systems.
- accepted to IEEE Trans. Comm., Apr. 2014.
-[&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;]
+ 62(5):2061-2071, Jun. 2014.
+[&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/TCOMM.2014.2316265">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -124,7 +125,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
- Finding a closest point in a lattice of voronoi's first kind.
+ Finding a closest point in a lattice of Voronoi's first kind.
  under review SIAM J. Discrete Math., 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;]
 
@@ -217,11 +218,15 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 [<a name="McKilliam_leastsqPSKnoncoICASSP_2012">13</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
  Noncoherent least squares estimators of carrier phase and amplitude.
- In <em>IEEE Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
-  4888-4892, May 2013.
-[&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;]
+ In <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  4888-4892, Vancouver, May 2013.
+[&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/ICASSP.2013.6638590">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
+</font></blockquote>
 
 </td>
 </tr>
