--- a/robby_bib.html
+++ b/robby_bib.html
@@ -27,12 +27,17 @@
 </pre>
 
 <a name="Kodithuwakku_tcomms_2014"></a><pre>
-@unpublished{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
+@article{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  note = {accepted to {IEEE Trans. Comm.}},
+  journal = <a href="#ieeetom">ieeetom</a>,
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.},
-  year = 2014
+  volume = 62,
+  number = 5,
+  pages = {2061-2071},
+  month = {Jun.},
+  year = 2014,
+  doi = {10.1109/TCOMM.2014.2316265},
+  issn = {0090-6778}
 }
 </pre>
 
@@ -87,7 +92,7 @@
 @unpublished{<a href="robby.html#McKilliam_closest_point_lattice_first_kind_2014">McKilliam_closest_point_lattice_first_kind_2014</a>,
   author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   note = {under review {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of Voronoi's first kind},
+  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
   year = 2014
 }
 </pre>
@@ -156,12 +161,16 @@
 
 <a name="McKilliam_leastsqPSKnoncoICASSP_2012"></a><pre>
 @inproceedings{<a href="robby.html#McKilliam_leastsqPSKnoncoICASSP_2012">McKilliam_leastsqPSKnoncoICASSP_2012</a>,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+  author = {McKilliam, R. G. and Pollok, A. and Cowley, B. and Clarkson, I. V. L. and Quinn, B. G.},
+  booktitle = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May},
-  pages = {4888-4892}
+  pages = {4888-4892},
+  month = may,
+  address = {Vancouver},
+  keywords = {Noncoherent detection;asymptotic statistics;phase shift keying},
+  doi = {10.1109/ICASSP.2013.6638590},
+  issn = {1520-6149}
 }
 </pre>
 
