--- a/robby.html
+++ b/robby.html
@@ -43,8 +43,9 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
  Decoder-assisted timing synchronization in multiuser CDMA systems.
- accepted to IEEE Trans. Comm., Apr. 2014.
-[&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;]
+ 62(5):2061-2071, Jun. 2014.
+[&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/TCOMM.2014.2316265">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -124,7 +125,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
- Finding a closest point in a lattice of voronoi's first kind.
+ Finding a closest point in a lattice of Voronoi's first kind.
  under review SIAM J. Discrete Math., 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;]
 
@@ -185,8 +186,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
  Carrier phase and amplitude estimation for phase shift keying using
   pilots and data.
- submitted to IEEE Transactions on Signal Processing, preprint
-  available http://arxiv.org/abs/1301.1760, Jan. 2013.
+ <em>IEEE Trans. Sig. Process.</em>, 61(15):3976-3989, Aug. 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKpilotsdata_2012">bib</a>&nbsp;]
 
 </td>
@@ -217,11 +217,15 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 [<a name="McKilliam_leastsqPSKnoncoICASSP_2012">13</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
  Noncoherent least squares estimators of carrier phase and amplitude.
- In <em>IEEE Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
-  4888-4892, May 2013.
-[&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;]
+ In <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  4888-4892, Vancouver, May 2013.
+[&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/ICASSP.2013.6638590">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
+</font></blockquote>
 
 </td>
 </tr>
@@ -331,8 +335,8 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
  Maximum-likelihood period estimation from sparse, noisy timing data.
- <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
-  3697-3700, Mar. 2008.
+ In <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  3697-3700, Las Vegas, NV, USA, Mar. 2008.
 [&nbsp;<a href="robby_bib.html#McKilliam2007">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/TIT.2008.928280">DOI</a>&nbsp;]
 
@@ -347,15 +351,11 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
  Linear-time block noncoherent detection of PSK.
- <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
-  2465-2468, Apr. 2009.
+ In <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  2465-2468, Taipei, Taiwan, Apr. 2009.
 [&nbsp;<a href="robby_bib.html#McKilliamLinearTimeBlockPSK2009">bib</a>&nbsp;| 
-<a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;| 
-<a href="http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf">.pdf</a>&nbsp;]
-<blockquote><font size="-1">
-We propose a new algorithm for noncoherent sequence detection of M-ary phase-shift-keying (M-PSK) symbols transmitted over a block fading channel. The algorithm is of complexity O(T), where T is the sequence length, and is therefore computationally superior to existing maximum-likelihood (ML) detectors of complexity O(T logT). Our detector is based on a new approximation we propose to the noncoherent ML function. We show that by using this close approximation, the detection problem reduces to a nearest lattice point problem for the lattice An*, from which we derive our O(T) approach. Simulation results are provided that show the difference in bit error rate is negligibly small for a wide range of signal-to-noise ratios.
-</font></blockquote>
-<p>
+<a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">DOI</a>&nbsp;]
+
 </td>
 </tr>
 
