--- a/robby_bib.html
+++ b/robby_bib.html
@@ -27,12 +27,17 @@
 </pre>
 
 <a name="Kodithuwakku_tcomms_2014"></a><pre>
-@unpublished{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
+@article{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  note = {accepted to {IEEE Trans. Comm.}},
+  journal = <a href="#ieeetom">ieeetom</a>,
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.},
-  year = 2014
+  volume = 62,
+  number = 5,
+  pages = {2061-2071},
+  month = {Jun.},
+  year = 2014,
+  doi = {10.1109/TCOMM.2014.2316265},
+  issn = {0090-6778}
 }
 </pre>
 
@@ -87,7 +92,7 @@
 @unpublished{<a href="robby.html#McKilliam_closest_point_lattice_first_kind_2014">McKilliam_closest_point_lattice_first_kind_2014</a>,
   author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   note = {under review {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of Voronoi's first kind},
+  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
   year = 2014
 }
 </pre>
@@ -129,12 +134,15 @@
 </pre>
 
 <a name="McKilliam_leastsqPSKpilotsdata_2012"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_leastsqPSKpilotsdata_2012">McKilliam_leastsqPSKpilotsdata_2012</a>,
+@article{<a href="robby.html#McKilliam_leastsqPSKpilotsdata_2012">McKilliam_leastsqPSKpilotsdata_2012</a>,
   author = {R. G. McKilliam and A. Pollok and B. Cowley and V. Clarkson and B. Quinn},
   title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-  note = {submitted to IEEE Transactions on Signal Processing, preprint available http://arxiv.org/abs/1301.1760},
-  year = 2013,
-  month = {Jan.}
+  journal = {IEEE Trans. Sig. Process.},
+  volume = 61,
+  number = 15,
+  pages = {3976-3989},
+  year = 2014,
+  month = {Aug.}
 }
 </pre>
 
@@ -156,12 +164,16 @@
 
 <a name="McKilliam_leastsqPSKnoncoICASSP_2012"></a><pre>
 @inproceedings{<a href="robby.html#McKilliam_leastsqPSKnoncoICASSP_2012">McKilliam_leastsqPSKnoncoICASSP_2012</a>,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+  author = {McKilliam, R. G. and Pollok, A. and Cowley, B. and Clarkson, I. V. L. and Quinn, B. G.},
+  booktitle = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May},
-  pages = {4888-4892}
+  pages = {4888-4892},
+  month = may,
+  address = {Vancouver},
+  keywords = {Noncoherent detection;asymptotic statistics;phase shift keying},
+  doi = {10.1109/ICASSP.2013.6638590},
+  issn = {1520-6149}
 }
 </pre>
 
@@ -240,15 +252,14 @@
 </pre>
 
 <a name="McKilliam2007"></a><pre>
-@article{<a href="robby.html#McKilliam2007">McKilliam2007</a>,
+@inproceedings{<a href="robby.html#McKilliam2007">McKilliam2007</a>,
   author = {R. G. McKilliam and I. V. L. Clarkson},
   title = {Maximum-likelihood period estimation from sparse, noisy timing data},
-  journal = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
+  booktitle = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2008,
   pages = {3697-3700},
   month = {Mar.},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  address = {Las Vegas, NV, USA},
   issn = {1520-6149},
   isbn = {978-1-4244-1483-3},
   doi = {10.1109/TIT.2008.928280}
@@ -256,19 +267,16 @@
 </pre>
 
 <a name="McKilliamLinearTimeBlockPSK2009"></a><pre>
-@article{<a href="robby.html#McKilliamLinearTimeBlockPSK2009">McKilliamLinearTimeBlockPSK2009</a>,
+@inproceedings{<a href="robby.html#McKilliamLinearTimeBlockPSK2009">McKilliamLinearTimeBlockPSK2009</a>,
   title = {Linear-time block noncoherent detection of {PSK}},
   author = {R. G. McKilliam and I. V. L. Clarkson and D. J. Ryan and I. B. Collings},
-  journal = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
-  year = {2009},
+  booktitle = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.},
+  year = 2009,
   month = {Apr.},
-  volume = {},
-  number = {},
+  address = {Taipei, Taiwan},
   pages = {2465-2468},
-  abstract = {We propose a new algorithm for noncoherent sequence detection of M-ary phase-shift-keying (M-PSK) symbols transmitted over a block fading channel. The algorithm is of complexity O(T), where T is the sequence length, and is therefore computationally superior to existing maximum-likelihood (ML) detectors of complexity O(T logT). Our detector is based on a new approximation we propose to the noncoherent ML function. We show that by using this close approximation, the detection problem reduces to a nearest lattice point problem for the lattice An*, from which we derive our O(T) approach. Simulation results are provided that show the difference in bit error rate is negligibly small for a wide range of signal-to-noise ratios.},
   doi = {10.1109/ICASSP.2009.4960121},
-  issn = {1520-6149},
-  url = {<a href="http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf">http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf</a>}
+  issn = {1520-6149}
 }
 </pre>
 
