added newest version of notes.

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -12,7 +12,7 @@
 	<tr>
 		<td valign="center" width="360"><h1>EEET3041 Signals and Systems</h1></td>
 		<td width="26">&nbsp;</td>
-		<td valign="top" width="314"><img border="0" src="animforgif.gif" width="314" height="276"></td>
+		<td valign="top" width="314"><img border="0" src="http://robbymckilliam.github.io/signalsandsystems/2013/animforgif.gif" width="314" height="276"></td>
 	</tr>
 </table>
 
@@ -31,6 +31,27 @@ Lecture notes and corresponding software will be added to this website as the co
 </table>
 
 <!-- CONTENT GOES HERE -->
+
+<br>
+<table cellpadding="10" cellspacing="5" width="700">
+<tr valign="top", align="left">
+<td>
+<a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a></td>
+<td>
+<a href="http://robbymckilliam.github.io/signalsandsystems/2013/test.zip">Software</a>
+</td>
+</tr>
+<!--
+<tr valign="top", align="left">
+<td>
+Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/practical.pdf">practical</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2013/theoryassignment.pdf">theory</a>
+</td>
+<td>
+Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2013/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2013/stats.R">R</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2013/top10.pdf">top 10</a>
+</td>
+</tr>
+-->
+</table>
 
 <br>
 <table cellpadding="0" cellspacing="0" width="700">
