--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -54,9 +54,11 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv
 
 <tr valign="top" align="left">
 <td>Videos:<br>
-<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec1.mp4">1.1 Properties of Signals</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec1.mp4">1.1 Properties of signals</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec2.mp4">1.2 Systems (functions of signals)</a><br>
-</td>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec3.mp4">1.3 Some important systems</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec4.mp4">1.4 Properties of systems</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec1.mp4">2.1 Passive electrical circuits</a><br>
 </tr>
 
 
