--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -59,6 +59,8 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec3.mp4">1.3 Some important systems</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch1sec4.mp4">1.4 Properties of systems</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec1.mp4">2.1 Passive electrical circuits</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec2.mp4">2.2 Active electrical circuits</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec4.mp4">2.4 Direct current motors</a><br>
 </tr>
 
 
