updated gif and webite.  new videos should be available

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -61,8 +61,10 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec1.mp4">2.1 Passive electrical circuits</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec2.mp4">2.2 Active electrical circuits</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec4.mp4">2.4 Direct current motors</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec1.mp4">3.1 Convolution, regular systems and the delta ''function''</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec2.mp4">3.2 Properties of convolution</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec3.mp4">3.3 Linear combining and composition</a><br>
 </tr>
-
 
 </table>
 
